Added 8gb default memory usage