@@ -22,6 +22,9 @@ fi
 #add proxy args
 args="-Dhttp.proxyHost=wwwcache.ebi.ac.uk -Dhttp.proxyPort=3128 -Dhttp.nonProxyHosts=*.ebi.ac.uk -DproxyHost=wwwcache.ebi.ac.uk -DproxyPort=3128 -DproxySet=true $args"
 
+#add some memory management
+args="-Xmx8g -XX:+UseConcMarkSweepGC $args"
+
 #Combine jar files used into one variable
 for file in `ls $base/lib`
 do
